changing card colour

--- a/index.html
+++ b/index.html
@@ -95,77 +95,89 @@
       <h2>. Projects .</h2>
       <hr>
       <div class="card">
-        <img class="card-img-top primary img-fluid rounded" id="gif" src="./assets/images/output.gif" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">README Generator</h5>
-          <p class="card-text">A command-line application that uses Node.js to dynamically generate a professional README.md file from a user's input using the NPM Inquirer package.</p>
+          <img class="img-fluid" src="assets/images/readme.jpg" class="card-img-top img-fluid primary"
+            alt="picture of a laptop showing a piece of code">
+          <p class="card-text">A command-line application that uses Node.js to dynamically generate a professional
+            README.md file from a user's input using the NPM Inquirer package.</p>
           <p class="card-text">Skills used: JavaScript, Node.js, NPM</p>
           <a href="https://github.com/helenesauve/Password-Generator" target="_blank" class="btn">Check me out</a>
         </div>
       </div>
-        <div class="row">
-          <div class="col-sm-6">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Weather Forecast App</h5>
-                <img class="img-fluid" src="assets/images/weather.jpg" class="card-img-top img-fluid secondary"
-                    alt="picture of a dark sky with lightening">
-                  <p class="card-text">A simple app rendering the weather forecast for the next 5 days for a city input
-                    provided by the user.</p>
-                  <p class="card-text">Skills used: JavaScript, JQuery, Open Weather forecast API, local storage</p>
-                  <a href="https://helenesauve.github.io/weather-dashboard/" target="_blank" class="btn">Check me
-                    out</a>
-              </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Weather Forecast App</h5>
+              <img class="img-fluid" src="assets/images/weather.jpg" class="card-img-top img-fluid secondary"
+                alt="picture of a dark sky with lightening">
+              <p class="card-text">A simple app rendering the weather forecast for the next 5 days for a city input
+                provided by the user.</p>
+              <p class="card-text">Skills used: JavaScript, JQuery, Open Weather forecast API, local storage</p>
+              <a href="https://helenesauve.github.io/weather-dashboard/" target="_blank" class="btn">Check me
+                out</a>
             </div>
           </div>
-          <div class="col-sm-6">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Work-Day Scheduler</h5>
-                <img class="img-fluid" src="assets/images/day-scheduler.png" class="card-img-top img-fluid secondary"
-                  alt="image of a work day scheduler">
-                <p class="card-text">A simple calendar application that allows a user to save events for each hour of
-                  the
-                  day by modifying the starter code.</p>
-                <p class="card-text">Skills used: JavaScript, JQuery, Moment.js</p>
-                <a href="https://helenesauve.github.io/work-day-scheduler/" target="_blank" class="btn">Check me out</a>
-              </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Work-Day Scheduler</h5>
+              <img class="img-fluid" src="assets/images/day-scheduler.png" class="card-img-top img-fluid secondary"
+                alt="image of a work day scheduler">
+              <p class="card-text">A simple calendar application that allows a user to save events for each hour of
+                the
+                day by modifying the starter code.</p>
+              <p class="card-text">Skills used: JavaScript, JQuery, Moment.js</p>
+              <a href="https://helenesauve.github.io/work-day-scheduler/" target="_blank" class="btn">Check me out</a>
             </div>
           </div>
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Password Generator</h5>
-                  <img class="img-fluid" src="assets/images/password-generator.png" class="card-img-top img-fluid secondary"
-                    alt="image of a password generator">
-                  <p class="card-text">A password generator that returns a password based on the user's selected
-                    options.
-                  </p>
-                  <p class="card-text">Skills used: JavaScript and JQuery</p>
-                  <a href="https://helenesauve.github.io/Password-Generator/" target="_blank" class="btn">Check me
-                    out</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Coffee Curator</h5>
-                  <img class="img-fluid" src="assets/images/coffee.png" class="card-img-top img-fluid secondary" alt="coffee curator app">
-                  <p class="card-text">An app for coffee lovers that quickly finds 5 cafés near you. Requires the Allow
-                    CORS. App built as part of a group work.
-                    Chrome extension to function at the moment.</p>
-                  <p class="card-text">Skills used: HTML, CSS, JavaScript, JQuery, Google Maps APIs, AJAX</p>
-                  <a href="https://harrygarstang.github.io/Coffee-App-Project/" target="_blank" class="btn">Check me
-                    out</a>
-                </div>
-              </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Password Generator</h5>
+              <img class="img-fluid" src="assets/images/password-generator.png" class="card-img-top img-fluid secondary"
+                alt="image of a password generator">
+              <p class="card-text">A password generator that returns a password based on the user's selected
+                options.
+              </p>
+              <p class="card-text">Skills used: JavaScript and JQuery</p>
+              <a href="https://helenesauve.github.io/Password-Generator/" target="_blank" class="btn">Check me
+                out</a>
             </div>
           </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Coffee Curator</h5>
+              <img class="img-fluid" src="assets/images/coffee.png" class="card-img-top img-fluid secondary"
+                alt="coffee curator app">
+              <p class="card-text">An app for coffee lovers that quickly finds 5 cafés near you. Requires the Allow
+                CORS. App built as part of a group work.
+                Chrome extension to function at the moment.</p>
+              <p class="card-text">Skills used: HTML, CSS, JavaScript, JQuery, Google Maps APIs, AJAX</p>
+              <a href="https://harrygarstang.github.io/Coffee-App-Project/" target="_blank" class="btn">Check me
+                out</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </div>
-
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="assets/js/script.js"></script>
 </body>
