changing the style for the cards buttons

--- a/index.html
+++ b/index.html
@@ -95,34 +95,36 @@
       <h2>. Projects .</h2>
       <hr>
       <div class="card">
-        <div class="card-body">
+        <div class="card-body d-flex flex-column">
           <h5 class="card-title">README Generator</h5>
           <img class="img-fluid" src="assets/images/readme.jpg" class="card-img-top img-fluid primary"
             alt="picture of a laptop showing a piece of code">
           <p class="card-text">A command-line application that uses Node.js to dynamically generate a professional
             README.md file from a user's input using the NPM Inquirer package.</p>
           <p class="card-text">Skills used: JavaScript, Node.js, NPM</p>
-          <a href="https://github.com/helenesauve/Password-Generator" target="_blank" class="btn">Check me out</a>
+          <a href="https://github.com/helenesauve/Password-Generator" target="_blank" class="btn mt-auto">Check me
+            out</a>
         </div>
       </div>
+      <br>
       <div class="row">
         <div class="col-sm-6">
           <div class="card">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Weather Forecast App</h5>
-              <img class="img-fluid" src="assets/images/weather.jpg" class="card-img-top img-fluid secondary"
+              <img class="img-fluid" src="assets/images/clouds.jpg" class="card-img-top img-fluid secondary"
                 alt="picture of a dark sky with lightening">
               <p class="card-text">A simple app rendering the weather forecast for the next 5 days for a city input
                 provided by the user.</p>
               <p class="card-text">Skills used: JavaScript, JQuery, Open Weather forecast API, local storage</p>
-              <a href="https://helenesauve.github.io/weather-dashboard/" target="_blank" class="btn">Check me
+              <a href="https://helenesauve.github.io/weather-dashboard/" target="_blank" class="btn mt-auto">Check me
                 out</a>
             </div>
           </div>
         </div>
         <div class="col-sm-6">
           <div class="card">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Work-Day Scheduler</h5>
               <img class="img-fluid" src="assets/images/day-scheduler.png" class="card-img-top img-fluid secondary"
                 alt="image of a work day scheduler">
@@ -130,15 +132,17 @@
                 the
                 day by modifying the starter code.</p>
               <p class="card-text">Skills used: JavaScript, JQuery, Moment.js</p>
-              <a href="https://helenesauve.github.io/work-day-scheduler/" target="_blank" class="btn">Check me out</a>
+              <a href="https://helenesauve.github.io/work-day-scheduler/" target="_blank" class="btn mt-auto">Check me
+                out</a>
             </div>
           </div>
         </div>
       </div>
+      <br>
       <div class="row">
         <div class="col-sm-6">
           <div class="card">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Password Generator</h5>
               <img class="img-fluid" src="assets/images/password-generator.png" class="card-img-top img-fluid secondary"
                 alt="image of a password generator">
@@ -146,22 +150,21 @@
                 options.
               </p>
               <p class="card-text">Skills used: JavaScript and JQuery</p>
-              <a href="https://helenesauve.github.io/Password-Generator/" target="_blank" class="btn">Check me
+              <a href="https://helenesauve.github.io/Password-Generator/" target="_blank" class="btn mt-auto">Check me
                 out</a>
             </div>
           </div>
         </div>
         <div class="col-sm-6">
           <div class="card">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Coffee Curator</h5>
               <img class="img-fluid" src="assets/images/coffee.png" class="card-img-top img-fluid secondary"
                 alt="coffee curator app">
-              <p class="card-text">An app for coffee lovers that quickly finds 5 cafés near you. Requires the Allow
-                CORS. App built as part of a group work.
-                Chrome extension to function at the moment.</p>
+              <p class="card-text">An app for coffee lovers that quickly finds 5 cafés near you. </p>
+              <p>App built as part of a group project which currently requires the Allow CORS Chrome extension to function.</p>
               <p class="card-text">Skills used: HTML, CSS, JavaScript, JQuery, Google Maps APIs, AJAX</p>
-              <a href="https://harrygarstang.github.io/Coffee-App-Project/" target="_blank" class="btn">Check me
+              <a href="https://harrygarstang.github.io/Coffee-App-Project/" target="_blank" class="btn mt-auto">Check me
                 out</a>
             </div>
           </div>
